Update Kotlin, Improve Style, Improve Environment Documentation